fix: main content link visibility

--- a/src/ui/UserMonitors.scss
+++ b/src/ui/UserMonitors.scss
@@ -1,6 +1,6 @@
 .user-monitors-container {
   width: 780px;
-  margin: 40px 60px 30px;
+  padding: 40px 60px 30px;
 
   .create-button-container {
     display: flex;
